syntax = "proto3";
package heph.plugin.exec.v1;

message Target {
  message Output {
    string group = 1;
    repeated string paths = 2;
  }

  message Dep {
    message TargetRef {
      string package = 1;
      string name = 2;
      optional string output = 3;
    }
    repeated string files = 1;
    repeated TargetRef targets = 2;
  }

  repeated string run = 1;
  map<string, Dep> deps = 2;
  map<string, Dep> hash_deps = 3;
  map<string, Dep> runtime_deps = 4;
  repeated Output outputs = 5;
  map<string, string> env = 6;
  map<string, string> runtime_env = 7;
  repeated string pass_env = 8;
  repeated string runtime_pass_env = 9;
}
